change absolute links to relative to allow proxying
Please change the links to the different atlases so they are relative to this URL.  That way, we can proxy from a URL on nac.spl.harvard.edu and have at least the top level atlases work transparently. I've confirmed that proxying works:

http://nac.spl.harvard.edu/atlas-releases

Thanks.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <a id="atlas-releases" class="anchor" href="#atlas-releases" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Atlas Releases</h1>
 
 <ul>
-<li><a href="https://stity.github.io/atlas-releases/brain/utils/three">Brain</a></li>
-<li><a href="https://stity.github.io/atlas-releases/knee/utils/three">Knee</a></li>
-<li><a href="https://stity.github.io/atlas-releases/abdominal/utils/three">Abdominal</a></li>
+<li><a href="brain/utils/three">Brain</a></li>
+<li><a href="knee/utils/three">Knee</a></li>
+<li><a href="abdominal/utils/three">Abdominal</a></li>
 </ul>
 
       <footer class="site-footer">
